<resources>
    <string name="app_name">Fizjotherapy</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Hasło</string>
    <string name="action_sign_in">Zaloguj się</string>
    <string name="action_sign_in_short">Zaloguj się</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Niepoprawna nazwa użytkownika</string>
    <string name="invalid_password">Hasło musi mieć min. 5 znaków</string>
    <string name="login_failed">"Logowanie nieudane"</string>
    <string name="forgot_pass">Zapomniałem hasła</string>
    <string name="without_log">Zaloguj jako gość</string>
    <string name="username_label">Nazwa użytkownika</string>
    <string name="umow_wizyte">Umów wizytę</string>
    <string name="nav_header_title">Menu</string>
    <string name="zarejestruj_sie">Zarejestruj się</string>
    <string name="confirm_password">Potwierdź hasło</string>
    <string name="username_already_exists">Użytkownik już istnieje</string>
    <string name="empty_filed_text">Pole nie może być puste</string>
    <string name="username_requirements">Nazwa za krótka</string>
    <string name="not_matching_password">Hasła nie są takie same</string>
    <string name="incorrect_email_error_text">Nieprawidłowy email</string>
    <string name="email_error_text">email nie może być pusty</string>
    <string name="strong_password_text">Silne hasło</string>
    <string name="short_password_text">Za krótkie hasło</string>
    <string name="empty_password_text">Hasło nie może być puste</string>
    <string name="name_to_reg">Imię i Nazwisko</string>
    <string name="numer_telefonu">Numer telefonu</string>
    <string name="dane_checkbox">Użyj tych samych danych użytkownika</string>
    <string name="data_urodzenia">Data urodzenia</string>
    <string name="lekarz_przyjmujacy">Lekarz przyjmujący:</string>
    <string name="godzina_wizyty">Godzina wizyty:</string>
    <string name="moje_wizyty">Moje wizyty</string>
    <string name="rejestracja_wizyty">Rejestracja wizyty</string>
    <string name="wybierz_role">Wybierz role</string>
</resources>